--- a/public/css/style.css
+++ b/public/css/style.css
@@ -320,7 +320,7 @@ header * {
 
 .full {
 	 width: 100%; height: 100%;
-	background: url(../img/parallax.png) no-repeat center center fixed; 
+	background: url(../img/dream.jpg) no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
