--- a/public/css/style.css
+++ b/public/css/style.css
@@ -357,8 +357,8 @@ header * {
 
 .button.white.light {
 	background: none;
-	color: #fff;
-	border: 2px solid #fff;
+	color: #252525;
+	border: 2px solid #252525;
 	box-shadow: none;
 	text-shadow: none;
 	font-size: 22px;
